# oel-port

./: .gitignore  INSTALL  LICENSE.md  LISTING.md  README.md
c64img/: oel-de.P00  oel-pl.d64
docs/: graphics.txt  lgc.txt
notes/: color-table.txt  control-charachetrs.txt  control-characters.txt  functions.txt  links  listing.bas  strings.txt  strings_notranslation.txt  strings_translated.txt  variables.txt
scripts/: change_colors.bash  eqsize.py  str2enum.sh  strtoarr.sh  translate.py
src/: CMakeLists.txt  Cache.hpp  Config.cpp  Config.h  FunctionPointerWrapper_t.hpp  Game.cpp  Game.h  Graphics.cpp  Graphics.h  INIFile.hpp  InputManager.hpp  Logger.hpp  Makefile  Player.cpp  Player.h  TextWrapper.cpp  TextWrapper.hpp  colors.h  main.cpp  strings.h  types.h
src/oel/: Company.cpp  Company.h  Player.cpp
src/resources/: de.lang  eng.lang
